refactor on method findAll, change the type o list returned;